--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "vlessheroku",
+  "name": "vless2",
   "description": "Deploy vless on Heroku.",
   "keywords": [
     "vless"
@@ -7,10 +7,10 @@
   "env": {
     "UUID": {
       "description": "VLESS UUID",
-      "value": "3a53a3e5-da83-48d2-aee9-d88a498eb3dd"
+      "value": "8ebcd3ac-7a6d-49cc-8706-ae8fe85b6dcf"
     }
   },
-  "website": "https://github.com/GeekNAUer/",
-  "repository": "https://github.com/GeekNAUer/vlessheroku",
+  "website": "https://github.com/zqzrsmydr/",
+  "repository": "https://github.com/zqzrsmydr/awsdx",
   "stack": "container"
 }
